# mlx-week-6

./: .gitignore  README.md  TODO.MD  cmds.sh  config.py  continue_training.py  data.py  debug_data.py  debug_model_state.py  debug_tokenizer.py  example_hf_hub_saving.py  example_resume_training.py  example_usage.py  main.py  model.py  pyproject.toml  requirements.txt  scaling_laws.py  setup.sh  test_resume_functionality.py  train.py  utils.py
trained_model/: config.json
